--- a/form.html
+++ b/form.html
@@ -53,7 +53,7 @@
           <div class="logoContainer">
             <img
               class="logo"
-              src="./assets/images/logo-icon.jpg"
+              src="./assets/images/altschool.png"
               alt="altschool-logo"
             />
             <h2 class="signin">
